Visualização termo aditivo v2

--- a/sisgee-master/sisgee/src/main/webapp/WEB-INF/web.xml
+++ b/sisgee-master/sisgee/src/main/webapp/WEB-INF/web.xml
@@ -21,6 +21,10 @@
         <servlet-name>ValidaBuscarConvenioServlet</servlet-name>
         <servlet-class>br.cefetrj.sisgee.view.convenio.ValidaBuscarConvenioServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>VisualizarTermoEAditivo</servlet-name>
+        <servlet-class>br.cefetrj.sisgee.view.termoaditivo.VisualizarTermoEAditivo</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>BuscarConvenioServlet</servlet-name>
         <url-pattern>/BuscarConvenioServlet</url-pattern>
@@ -41,6 +45,7 @@
         <servlet-name>ValidaBuscarConvenioServlet</servlet-name>
         <url-pattern>/ValidaBuscarConvenioServlet</url-pattern>
     </servlet-mapping>
+    
     <jsp-config>
         <jsp-property-group>
             <url-pattern>*.jsp</url-pattern>
